--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://sanskruthiya.github.io/geoloniaTest/",
+  "homepage": "https://sanskruthiya.github.io/geoloniaTanaka/",
   "eslintConfig": {
     "extends": "react-app"
   },
